# karateway

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.admin-api  Dockerfile.gateway  README.md  docker-compose.prod.yml  docker-compose.yml  setup.sh
.cargo/: audit.toml
.github/workflows/: docker.yml  release.yml  test.yml
certs/: cert.pem  key.pem
crates/admin-api/: Cargo.toml
crates/admin-api/src/: error.rs  main.rs  openapi.rs  state.rs
crates/admin-api/src/routes/: api_route.rs  audit_log.rs  backend_service.rs  health.rs  mod.rs  rate_limit.rs  service_health.rs  whitelist_rule.rs
crates/config/: Cargo.toml
crates/config/src/: app_config.rs  audit_logger.rs  database.rs  lib.rs  redis.rs
crates/config/src/repository/: api_route.rs  audit_log.rs  backend_service.rs  mod.rs  rate_limit.rs  whitelist_rule.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config_loader.rs  health_checker.rs  main.rs  proxy.rs  rate_limiter.rs  router.rs  whitelist_validator.rs
crates/karateway-core/: Cargo.toml
crates/karateway-core/src/: error.rs  lib.rs  response.rs
crates/karateway-core/src/models/: api_route.rs  audit_log.rs  backend_service.rs  config_version.rs  load_balancer.rs  mod.rs  rate_limit.rs  whitelist_rule.rs
crates/metrics/: Cargo.toml
dashboard/: .dockerignore  .gitignore  Dockerfile  components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.html
dashboard/src/lib/: api.ts  types.ts  version.ts
dashboard/src/lib/components/: AppSidebar.svelte  TopBar.svelte
dashboard/src/lib/components/ui/pagination/: pagination.svelte
dashboard/src/lib/stores/: toast.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/src/routes/audit-logs/: +page.svelte
dashboard/src/routes/rate-limits/: +page.svelte
dashboard/src/routes/routes/: +page.svelte
dashboard/src/routes/services/: +page.svelte
dashboard/src/routes/whitelist/: +page.svelte
docs/: API.md  DATABASE_SCHEMA.md  DEPLOYMENT.md
migration/: Cargo.toml
migration/src/: lib.rs  m20251116_075450_backend_services.rs  m20251116_075452_api_routes.rs  m20251116_075454_whitelist_rules.rs  m20251116_075456_rate_limits.rs  m20251116_075458_load_balancer_config.rs  m20251116_075501_config_audit_log.rs  m20251116_075503_config_versions.rs  m20251116_075505_gateway_metrics.rs  m20251116_075507_indexes.rs  m20251116_075509_update_timestamp_triggers.rs  m20251116_075511_audit_triggers.rs  m20251116_075513_config_snapshot_functions.rs  m20251116_075515_audit_logs.rs
migrations/: 20251116075450_backend_services.down.sql  20251116075450_backend_services.up.sql  20251116075452_api_routes.down.sql  20251116075452_api_routes.up.sql  20251116075454_whitelist_rules.down.sql  20251116075454_whitelist_rules.up.sql  20251116075456_rate_limits.up.sql  20251116075458_load_balancer_config.down.sql  20251116075458_load_balancer_config.up.sql  20251116075501_config_audit_log.down.sql  20251116075501_config_audit_log.up.sql  20251116075503_config_versions.down.sql  20251116075503_config_versions.up.sql  20251116075505_gateway_metrics.down.sql  20251116075505_gateway_metrics.up.sql  20251116075507_indexes.down.sql  20251116075507_indexes.up.sql  20251116075509_update_timestamp_triggers.down.sql  20251116075509_update_timestamp_triggers.up.sql  20251116075511_audit_triggers.down.sql  20251116075511_audit_triggers.up.sql  20251116075513_config_snapshot_functions.down.sql  20251116075513_config_snapshot_functions.up.sql  20251116075515_audit_logs.down.sql  20251116075515_audit_logs.up.sql
