[workspace]
members = [
    "crates/gateway",
    "crates/admin-api",
    "crates/karateway-core",
    "crates/config",
    "crates/metrics",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Karateway Team"]
license = "MIT"

[workspace.dependencies]
# Pingora Framework (latest) - with rustls for Windows compatibility (pure Rust, no C deps)
pingora = { version = "0.6.0", default-features = false, features = ["rustls"] }
pingora-core = { version = "0.6.0", default-features = false, features = ["rustls"] }
pingora-proxy = { version = "0.6.0", default-features = false, features = ["rustls"] }
pingora-http = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-limits = "0.6.0"
pingora-timeout = "0.6.0"
pingora-cache = "0.6.0"

# Rustls crypto provider (required for rustls TLS)
rustls = { version = "0.23", features = ["ring"] }

# Async Runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7.13"
bytes = "1.10"

# Web Framework (Axum)
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "compression-full"] }

# Database
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "json"] }
deadpool-postgres = "0.14.0"

# Redis
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.22.0"

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"

# Logging & Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Error Handling
anyhow = "1.0.95"
thiserror = "2.0.9"

# Utilities
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
dashmap = "6.1.0"
arc-swap = "1.7.1"
once_cell = "1.20.2"
futures = "0.3.31"

# Configuration
envconfig = "0.10.0"
dotenvy = "0.15.7"

# Metrics
prometheus = "0.14.0"

# HTTP Client
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
http = "1.2"
url = "2.5"

# Async Traits
async-trait = "0.1"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# OpenAPI / Swagger
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Security
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
