[workspace]
members = [
    "crates/gateway",
    "crates/admin-api",
    "crates/karateway-core",
    "crates/config",
    "crates/metrics",
    "migration",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Karateway Team"]
license = "MIT"

[workspace.dependencies]
# Pingora Framework (latest) - with rustls for Windows compatibility (pure Rust, no C deps)
pingora = { version = "0.6.0", default-features = false, features = ["rustls"] }
pingora-core = { version = "0.6.0", default-features = false, features = ["rustls"] }
pingora-proxy = { version = "0.6.0", default-features = false, features = ["rustls"] }
pingora-http = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-limits = "0.6.0"
pingora-timeout = "0.6.0"
pingora-cache = "0.6.0"

# Rustls crypto provider (required for rustls TLS)
rustls = { version = "0.23", features = ["ring"] }

# Async Runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
bytes = "1.11.0"

# Web Framework (Axum)
axum = "0.8.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace", "compression-full"] }

# Database - versions matching sea-query 0.32.7 example
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
deadpool-postgres = "0.14.1"

# SeaQuery matching 0.32.7 tag example
sea-query = { git = "https://github.com/SeaQL/sea-query", tag = "0.32.7", features = ["with-uuid", "with-chrono", "with-json"] }
sea-query-binder = { git = "https://github.com/SeaQL/sea-query", tag = "0.32.7", features = ["sqlx-postgres", "with-uuid", "with-chrono", "with-json", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Redis
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.22.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Logging & Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Utilities
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
arc-swap = "1.7.1"
once_cell = "1.21.3"
futures = "0.3.31"

# Configuration
envconfig = "0.11.0"
dotenvy = "0.15.7"

# Metrics
prometheus = "0.14.0"

# HTTP Client
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
http = "1.3.1"
url = "2.5.7"

# Async Traits
async-trait = "0.1.89"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# OpenAPI / Swagger
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Security
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
