[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-rustls",  # ASYNC_RUNTIME feature
  "sqlx-postgres",         # DATABASE_DRIVER feature
]
