[package]
name = "karateway-admin-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "admin-api"
path = "src/main.rs"

[dependencies]
# Internal crates
karateway-core = { path = "../karateway-core" }
karateway-config = { path = "../config" }
karateway-metrics = { path = "../metrics" }

# Web Framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async Runtime
tokio = { workspace = true }
futures = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }
deadpool-redis = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Validation
validator = { workspace = true }

# OpenAPI / Swagger
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Security
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
