[package]
name = "karateway-config"
version.workspace = true
edition.workspace = true

[dependencies]
# Core
karateway-core = { path = "../karateway-core" }

# Async Runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }
deadpool-postgres = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }

# Redis
redis = { workspace = true }
deadpool-redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }

# Configuration
envconfig = { workspace = true }
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
