[package]
name = "karateway-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
# Internal crates
karateway-core = { path = "../karateway-core" }
karateway-config = { path = "../config" }
karateway-metrics = { path = "../metrics" }

# Pingora
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-http = { workspace = true }
pingora-load-balancing = { workspace = true }
pingora-limits = { workspace = true }
pingora-timeout = { workspace = true }
pingora-cache = { workspace = true }

# Async Runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

# HTTP
reqwest = { workspace = true }
http = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# TLS
rustls = { workspace = true }
