[package]
name = "karateway-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Async Runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

# Logging
tracing = { workspace = true }

# Validation
validator = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
